--- a/enregistrement_type_account.html
+++ b/enregistrement_type_account.html
@@ -27,7 +27,7 @@
 }
   </style>
 </head>
-<body>
+<body class="has-background-dark">
     <h1 id="title_pp" class="has-text-primary is-size-2 has-background-white"> Los Pollos Hermanos</h1>
   <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
   
@@ -87,7 +87,6 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <button class="button is-info" id="connection_button">Connectez-vous!</button>
           <a class="button is-primary" href="contratacion.html">
             <strong>Rejoins l'&Eacute;quipe!</strong>
           </a>
@@ -96,6 +95,31 @@
     </div>
   </div>
 </nav>
+<h1 class="title has-text-link has-text-centered">Type de compte</h1>
+<p class="has-text-centered has-text-white">Chez nous vous avez la possibilité de créer deux types de compte differents<br/>
+lissez vien l'information sur chaque type de compte qui est ci-dessous puisque chaque type de compte<br/>
+est utilisée d'une manière totalement differente.</p>
+<div class="columns m-1">
+    <div class="column is-half">
+  <div class="box has-background-white" style="border: 6px solid #ff4343">
+    <h1 class="title has-text-centered has-text-primary is-size-4">Compte Client</h1>
+    <p class="has-text-success">Ce type compte est comme son nom l'indiaue utilisé par les clients pour les <br/>
+        <a href="https://dictionary.cambridge.org/dictionary/english/delivery">deliverys</a> et pour échanger des <a>Chickenpoints</a> par des produits d'edition limité<br/>
+    <br/>
+    Avec ce type de compte vous pouvez:</p>
+    <br/>
+    <ol>
+        <li class="has-text-success">Commander de la nourriture à domicile et gagner des <a>Chickenpoints</a></li>
+        <li 
+    </ol>
+  </div>
+    </div>
+    <div class="column is-half">
+        <div class="box has-background-white" style="border: 6px solid #2bb1ff">
+            <h1 class="title has-text-centered has-text-info is-size-4">Compte Professionel</h1>
+        </div>
+    </div>
+</div>
     <footer class="has-background-grey-darker hero" style="margin-top: 2rem; border-top: 2px solid">
         <p style="padding:3rem"> Une filiale de Madrigal Electromotive</p>
     </footer>
