finished accounts path (not functionality!!!)

--- a/Page_Principale.html
+++ b/Page_Principale.html
@@ -91,12 +91,12 @@
           <a class="button is-primary" href="contratacion.html">
             <strong>Rejoins l'&Eacute;quipe!</strong>
           </a>
+          <a class="button is-light has-text-info" id="account_button">Mon compte</a>
         </div>
       </div>
     </div>
   </div>
 </nav>
-  <script src="JS_PP.js"></script>
 <div class="container mt-5">
   <div class="columns">
     <div class="column is-two-thirds">
@@ -143,7 +143,7 @@ Vous ne go&ucirc;terez plus jamais le poulet de la m&ecirc;me mani&egrave;re !<b
        <div>
          <p class="has-text-success">Vous ne possedez pas une compte? alors: </p>
          <div class="buttons">
-         <a href="enregistrement.html"><button class="button is-info">Créez une compte</button></a>
+         <a href="enregistrement_type_account.html"><button class="button is-info">Créez une compte</button></a>
        </div>
        </div>
      </div>     
