--- a/enregistrement_type_account.html
+++ b/enregistrement_type_account.html
@@ -33,7 +33,7 @@
   
   <div id="navbar" class="navbar-menu box pt-3 pb-3 is-active m-1">
     <div class="navbar-start">
-      <a class="navbar-item is-selected pr-4 pl-4" href="Page_Principale">
+      <a class="navbar-item is-selected pr-4 pl-4" href="Page_Principale.html">
         Nous
       </a>
 
@@ -110,14 +110,33 @@ est utilisée d'une manière totalement differente.</p>
     <br/>
     <ol>
         <li class="has-text-success">Commander de la nourriture à domicile et gagner des <a>Chickenpoints</a></li>
-        <li 
+        <li class="has-text-success">Gérer et échanger votres <a>Chickenpoints</a></li>
+        <li class="has-text-success">Béneficier des coupons et des promotions exlusives pour les clients avec compte</li> 
     </ol>
   </div>
     </div>
     <div class="column is-half">
         <div class="box has-background-white" style="border: 6px solid #2bb1ff">
             <h1 class="title has-text-centered has-text-info is-size-4">Compte Professionel</h1>
+            <p class="has-text-success">Ce type de compte est pour les personnes aui veulent candidater pour un poste de travaille
+              chez nous.
+            </p>
+            <p class="has-text-primary">Attention!!! ce type compte n'a pas d'access à notre environement de travaille
+              il est reservé pour les candidatures, une fois embauché/e vous recevrez accès à l'environement interne 
+              (ou pas en fonction de votre poste).
+            </p>
+            <p class="has-text-success">avec ce type de compte vous pouvez:</p>
+            <ol>
+              <li class="has-text-success">Deposser une candidature d'embauchement chez nous.</li>
+              <li class="has-text-success">Verifier l'état de votre candidature</li>
+              <li class="has-text-success">Verifier les horaires des vos prochaines interviews</li>
+            </ol>
         </div>
+    </div>
+</div>
+<p class="has-text-white has-text-centered">Maintenant que vous-êtes informez vous pouvez continuer et créer votre compte.</p>
+    <div class="buttons">
+      <a class="button is-link has-text-centered ml-6 mr-6" href="enregistrement_conditions.html" style="width: 100%;">Continuer</a>
     </div>
 </div>
     <footer class="has-background-grey-darker hero" style="margin-top: 2rem; border-top: 2px solid">
