did some changes

--- a/enregistrement.html
+++ b/enregistrement.html
@@ -60,9 +60,9 @@
        </div>
            <div class="field">
              <label class="label has-text-info">Pays de residence</label>
-             <div class="control">
-              <div class="select" >
-                <select>
+             <div class="control is-expanded">
+              <div class="select is-fullwidth">
+                <select> 
                   <option>États-unis</option>
                   <option>Mexique</option>
                   <option>France</option>
