--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,7 @@
   <h1 id="title_pp" class="has-text-primary is-size-2 has-background-white"> Los Pollos Hermanos</h1>
   <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
 
-    <div  id="navbar"  class="navbar-menu box pt-3 pb-3 is-active m-1">
+    <div  id="navbar"  class="navbar-menu box pt-3 pb-3 m-1 is-active">
       <div class="navbar-start">
         <a class="navbar-item  pr-4 pl-4" href="Page_Principale.html">
          Nous
@@ -265,8 +265,12 @@
      </div>
     </div>
   </div>
-  <div class="buttons">
-    
+  <div class="field is-grouped is-grouped-centered mt-4">
+    <div class="control">
+      <div class="buttons">
+        <a href="commande_choix.html" class="button is-primary">Commander</a>
+      </div>
+    </div>
   </div>
   <div class="modal" id="connection_modal">
     <div class="modal-background"></div>
@@ -298,7 +302,7 @@
     </div>
     <button class="modal-close is-large" aria-label="close" id="modal_close_button"></button>
   </div>
-  <footer class="has-background-grey-darker" style="margin-top: 2rem">
+  <footer class="has-background-grey-darker" style="margin-top: 2rem; border-top: 2px solid">
     <p style="padding:3rem"> Une filiale de Madrigal Electromotive</p>
   </footer>
   <script src="scripts/pago.js"></script>
