--- a/commande_pickup_local_ch.html
+++ b/commande_pickup_local_ch.html
@@ -34,7 +34,7 @@
   
   <div id="navbar" class="navbar-menu box pt-3 pb-3 is-active m-1">
     <div class="navbar-start">
-      <a class="navbar-item pr-4 pl-4" href="Page_Principale.html">
+      <a class="navbar-item is-selected pr-4 pl-4" href="Page_Principale">
         Nous
       </a>
 
@@ -92,39 +92,23 @@
           <a class="button is-primary" href="contratacion.html">
             <strong>Rejoins l'&Eacute;quipe!</strong>
           </a>
+          <a class="button is-light has-text-info" id="account_button">
+            <span class="icon-text">
+                <span class="icon">
+                    <i class="fas fa-home"></i>
+                </span>
+                <span>Mon Compte</span>
+            </span>
+          </a>
         </div>
       </div>
     </div>
   </div>
 </nav>
-<h1 class="title has-text-centered has-text-link is-size-3 mt-2">Commander</h1>
-<p class="is-size-4 has-text-centered has-text-white">Choissisez le type de votre commande</p>
-<div class="columns">
-    <div class="column">
-        <div class="box has-background-danger m-6  has-text-centered has-text-success" id="pickup_b">
-            <span class="icon-text">
-                <span class="is-size-3">Pickup</span>
-                <span class="icon is-medium is-size-4">
-                    <i class="fas fa-store"></i>
-                </span>
-            </span>
-        </div>
-    </div>
-    <div class="column">
-        <div class="box has-background-info m-6  has-text-centered has-text-success" id="delivery_b">
-            <span class="icon-text">
-                <span class="is-size-3">Delivery</span>
-                <span class="icon is-medium is-size-4">
-                    <i class="fas fa-home"></i>
-                </span>
-            </span>
-        </div>
-    </div>
-</div>
-<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-<script src="scripts/commande_choix.js"></script>
+<h1 class=""></h1>
 <footer class="has-background-grey-darker hero" style="margin-top: 2rem; border-top: 2px solid">
     <p style="padding:3rem"> Une filiale de Madrigal Electromotive</p>
-  </footer>
+</footer>
+<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </body>
 </html>
