--- a/contratacion.html
+++ b/contratacion.html
@@ -402,21 +402,21 @@ maintenir, on doit survivre après tout. En tant que amants de la nourriture et 
     Travailler chez Los Pollos Hermanos offre de nombreux avantages aux employés, garantissant un<br/>
     environnement de travail motivant et épanouissant. Voici un tableau avec les principaux bénéfices et les postes dont y peuvent profiter :
   </p>
-  <div class="box m-4">
+  <div class="box m-4 has-background-white" style="border: 2px solid rgb(255, 174, 0)">
     <h1 class="is-size-4 has-text-centered has-text-link title">Table de Benefices</h1>
-  <table class="table is-bordered is-hoverable is-fullwidth">
+  <table class="table is-bordered is-hoverable is-fullwidth has-background-white ">
     <thead>
       <tr>
-        <th>Benefice</th>
-        <th>Chef</th>
-        <th>Serveur</th>
-        <th>Responsable de site</th>
-        <th>Équipe de gestion</th>
+        <th class="has-text-success">Benefice</th>
+        <th class="has-text-success">Chef</th>
+        <th class="has-text-success">Serveur</th>
+        <th class="has-text-success">Responsable de site</th>
+        <th class="has-text-success">Équipe de gestion</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>Repas et reductions</td>
+        <td class="has-text-success">Repas et reductions</td>
         <td class="has-text-centered">
           <span class="icon has-text-link">
             <i class="fas fa-check"></i>
@@ -439,7 +439,7 @@ maintenir, on doit survivre après tout. En tant que amants de la nourriture et 
         </td>
       </tr>
       <tr>
-        <td>Developpement professionel</td>
+        <td class="has-text-success">Developpement professionel</td>
         <td class="has-text-centered">
           <span class="icon has-text-link">
             <i class="fas fa-check"></i>
@@ -462,7 +462,7 @@ maintenir, on doit survivre après tout. En tant que amants de la nourriture et 
         </td>
       </tr>
       <tr>
-        <td>Sante et bien-etre</td>
+        <td class="has-text-success">Sante et bien-etre</td>
         <td class="has-text-centered">
           <span class="icon has-text-link">
             <i class="fas fa-check"></i>
@@ -485,7 +485,7 @@ maintenir, on doit survivre après tout. En tant que amants de la nourriture et 
         </td>
       </tr>
       <tr>
-        <td>Primes de performance et bonus</td>
+        <td class="has-text-success">Primes de performance et bonus</td>
         <td class="has-text-centered">
           <span class="icon has-text-link">
             <i class="fas fa-ban"></i>
@@ -511,12 +511,12 @@ maintenir, on doit survivre après tout. En tant que amants de la nourriture et 
   </table>
     </div>
   <p class="mt-4 ml-6 has-text-white">Vous trouverez plus d'information sur chaque benfice ainsi que les benefices de chaque poste ci-dessous:</p>
-  <div class="box m-4">
+  <div class="box m-4 has-background-white" style="border: 2px solid rgb(255, 174, 0)">
   <h1 class="is-size-4 has-text-centered title has-text-link">Information</h1>
   <div class="columns">
     <div class="column is-half">
       <h1 class="subtitle has-text-centered has-text-link is-size-4">Benefices generaux</h1>
-  <ol class="ml-6 is-size-5 ">
+  <ol class="ml-6 is-size-5 has-text-success">
     <li><p class="has-text-success is-size-5">Repas et Réductions</p>
     <ul>
       <li class="has-text-success">• Repas gratuits ou à tarif réduit lors des heures de service</li>
@@ -591,49 +591,51 @@ maintenir, on doit survivre après tout. En tant que amants de la nourriture et 
   <p class="has-text-centered has-text-info is-size-3">01 23 45 67 98</p>
   <br/>
   <button class="button has-background-white has-text-link mb-0 ml-0" id="accordion">Notions Legales</button>
-  <div class="box mt-0" id="panel">
-    <h1 class="title is-size-4 has-text-centered has-text-success">Règlement Légal pour les Travailleurs de Los Pollos Hermanos</h1>
-    <h1 class="has-text-centered title is-size-5">1. Respect du Code du Travail</h1>
-    <p class="has-text-centered">Tous les employés de Los Pollos Hermanos doivent se conformer aux lois du travail en vigueur, notamment<br/>
+  <div class="box mt-0 has-background-white" id="panel" style="height: 60vh;">
+    <div style="height: 49vh; overflow: auto;">
+      <h1 class="title is-size-4 has-text-centered has-text-success">Règlement Légal pour les Travailleurs de Los Pollos Hermanos</h1>
+    <h1 class="has-text-centered title is-size-5 has-text-success">1. Respect du Code du Travail</h1>
+    <p class="has-text-centered has-text-success">Tous les employés de Los Pollos Hermanos doivent se conformer aux lois du travail en vigueur, notamment<br/>
     celles concernant la durée légale du travail, les temps de repos, les congés payés, ainsi que les conditions de<br/>
     santé et de sécurité au travail.</p>
     <br/>
-    <h1 class="has-text-centered title is-size-5">2. Contrat de Travail et Rémunération</h1>
-    <p class="has-text-centered">Chaque employé doit disposer d'un contrat de travail en conformité avec la législation en vigueur. La<br/>
+    <h1 class="has-text-centered title is-size-5 has-text-success">2. Contrat de Travail et Rémunération</h1>
+    <p class="has-text-centered has-text-success">Chaque employé doit disposer d'un contrat de travail en conformité avec la législation en vigueur. La<br/>
     rémunération doit respecter le salaire minimum légal et inclure les avantages sociaux prévus par la loi.</p>
     <br/>
-    <h1 class="has-text-centered title is-size-5">3. Hygiène et Sécurité Alimentaire</h1>
-    <p class="has-text-centered">En tant qu'entreprise de restauration, Los Pollos Hermanos doit respecter les normes d'hygiène alimentaire<br/>
+    <h1 class="has-text-centered title is-size-5 has-text-success">3. Hygiène et Sécurité Alimentaire</h1>
+    <p class="has-text-centered has-text-success">En tant qu'entreprise de restauration, Los Pollos Hermanos doit respecter les normes d'hygiène alimentaire<br/>
     établies par les autorités sanitaires. Tout employé manipulant des aliments doit suivre les protocoles de<br/>
     sécurité alimentaire et détenir, si nécessaire, une certification en la matière.</p>
     <br/>
-    <h1 class="has-text-centered title is-size-5">4. Protection des Données Personnelles</h1>
-    <p class="has-text-centered">Les employés doivent respecter la confidentialité des données des clients et de l'entreprise. Toute information<br/>
+    <h1 class="has-text-centered title is-size-5 has-text-success">4. Protection des Données Personnelles</h1>
+    <p class="has-text-centered has-text-success">Les employés doivent respecter la confidentialité des données des clients et de l'entreprise. Toute information<br/>
     personnelle doit être traitée en conformité avec les lois sur la protection des données.</p>
     <br/>
-    <h1 class="has-text-centered title is-size-5">5. Lutte contre la Discrimination et le Harcèlement</h1>
-    <p class="has-text-centered">Aucune discrimination ou harcèlement fondé sur l'origine, le genre, la religion, l'orientation sexuelle ou tout<br/>
+    <h1 class="has-text-centered title is-size-5 has-text-success">5. Lutte contre la Discrimination et le Harcèlement</h1>
+    <p class="has-text-centered has-text-success">Aucune discrimination ou harcèlement fondé sur l'origine, le genre, la religion, l'orientation sexuelle ou tout<br/>
     autre critère interdit par la loi ne sera toléré au sein de Los Pollos Hermanos.</p>
     <br/>
-    <h1 class="has-text-centered title is-size-5">6. Respect des Normes de Sécurité</h1>
-    <p class="has-text-centered">Tous les employés doivent suivre les protocoles de sécurité en place pour prévenir les accidents du travail et<br/>
+    <h1 class="has-text-centered title is-size-5 has-text-success">6. Respect des Normes de Sécurité</h1>
+    <p class="has-text-centered has-text-success">Tous les employés doivent suivre les protocoles de sécurité en place pour prévenir les accidents du travail et<br/>
     garantir la protection des clients et du personnel.</p>
     <br/>
-    <h1 class="has-text-centered title is-size-5">7. Obligation de Confidentialité</h1>
-    <p class="has-text-centered">Toute information interne concernant Los Pollos Hermanos, y compris les recettes, les procédés de fabrication<br/>
+    <h1 class="has-text-centered title is-size-5 has-text-success">7. Obligation de Confidentialité</h1>
+    <p class="has-text-centered has-text-success">Toute information interne concernant Los Pollos Hermanos, y compris les recettes, les procédés de fabrication<br/>
     et les données commerciales, est strictement confidentielle et ne peut être divulguée à des tiers.</p>
     <br/>
-    <h1 class="has-text-centered title is-size-5">8. Conformité Fiscale et Comptable</h1>
-    <p class="has-text-centered">Los Pollos Hermanos s'engage à respecter l'ensemble des obligations fiscales et comptables en vigueur,<br/>
+    <h1 class="has-text-centered title is-size-5 has-text-success">8. Conformité Fiscale et Comptable</h1>
+    <p class="has-text-centered has-text-success">Los Pollos Hermanos s'engage à respecter l'ensemble des obligations fiscales et comptables en vigueur,<br/>
     notamment en matière de déclaration des revenus, de TVA et de cotisations sociales.</p>
     <br/>
-    <h1 class="has-text-centered title is-size-5">9. Engagement envers la Responsabilité Sociétale</h1>
-    <p class="has-text-centered">L'entreprise favorise les pratiques respectueuses de l'environnement et encourage ses employés à adopter<br/>
+    <h1 class="has-text-centered title is-size-5 has-text-success">9. Engagement envers la Responsabilité Sociétale</h1>
+    <p class="has-text-centered has-text-success">L'entreprise favorise les pratiques respectueuses de l'environnement et encourage ses employés à adopter<br/>
     des comportements écoresponsables.</p>
     <br/>
-    <h1 class="has-text-centered title is-size-5">10. Sanctions en cas de Non-Respect</h1>
-    <p class="has-text-centered">Tout manquement aux obligations légales et réglementaires pourra entraîner des sanctions disciplinaires,<br/>
+    <h1 class="has-text-centered title is-size-5 has-text-success">10. Sanctions en cas de Non-Respect</h1>
+    <p class="has-text-centered has-text-success">Tout manquement aux obligations légales et réglementaires pourra entraîner des sanctions disciplinaires,<br/>
     pouvant aller jusqu'au licenciement, conformément au droit du travail en vigueur.</p>
+    </div>
   </div>
   <br/>
   <p class="ml-6 mt-4 has-text-white has-text-centered is-size-5">Ce règlement vise à garantir un environnement de travail respectueux des lois et des valeurs éthiques de Los Pollos Hermanos.</p>
