--- a/enregestriment_conditions.html
+++ b/enregestriment_conditions.html
@@ -202,6 +202,6 @@ et utiliser une compte chez nous ainsi que pour le depot des candidatures d'émb
   <footer class="has-background-grey-darker hero" style="margin-top: 2rem; border-top: 2px solid">
     <p style="padding:3rem"> Une filiale de Madrigal Electromotive</p>
   </footer>
-  <script src="scripts/enregistrement_conditions.js"></script>
+  <script src="scripts/PP.js"></script>
 </body>
 </html>
