--- a/enregistrement.html
+++ b/enregistrement.html
@@ -48,6 +48,12 @@
            <input class="input" type="text" placeholder="Votre prenom" name="acc_name" style="border: 1px solid #43ebff;">
          </div>
          <div class="field">
+         <label class="label has-text-info">Email</label>
+         <div class="control">
+           <input class="input" type="email" placeholder="Votre mail" name="acc_username" style="border: 1px solid #43ebff;">
+         </div>
+         </div>
+         <div class="field">
          <label class="label has-text-info">Nom d'utilisateur</label>
          <div class="control">
            <input class="input" type="text" placeholder="Cel que vous desirez" name="acc_username" style="border: 1px solid #43ebff;">
@@ -98,10 +104,9 @@
     </div>
     <div class="column is-one-quarter"></div>
   </div>
-  
-<footer class="has-background-grey-darker hero" style="margin-top: 2rem; border-top: 2px solid">
+    <footer class="has-background-grey-darker hero" style="margin-top: 2rem; border-top: 2px solid">
     <p style="padding:3rem"> Une filiale de Madrigal Electromotive</p>
-  </footer>
+    </footer>
   <script src="scripts/enregistrement.js"></script>
 </body>
 </html>
