--- a/menu.html
+++ b/menu.html
@@ -300,11 +300,11 @@
         </div>
       </div>     
     </div>
-    <button class="modal-close is-large" aria-label="close" id="modal_close_button"></button>
+    <button class="modal-close is-large" aria-label="close" id="modal_close_button1"></button>
   </div>
   <footer class="has-background-grey-darker" style="margin-top: 2rem; border-top: 2px solid">
     <p style="padding:3rem"> Une filiale de Madrigal Electromotive</p>
   </footer>
-  <script src="scripts/pago.js"></script>
+  <script src="scripts/PP.js"></script>
 </body>
 </html>
