--- a/Page_Principale.html
+++ b/Page_Principale.html
@@ -27,13 +27,13 @@
 }
   </style>
 </head>
-<body class="has-background-dark">
+<body class="has-background-dark" id="ppbody">
   <h1 id="title_pp" class="has-text-primary is-size-2 has-background-white"> Los Pollos Hermanos</h1>
   <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
   
   <div id="navbar" class="navbar-menu box pt-3 pb-3 is-active m-1">
     <div class="navbar-start">
-      <a class="navbar-item is-selected pr-4 pl-4" href="Page_Principale">
+      <a class="navbar-item is-selected pr-4 pl-4" href="Page_Principale.html">
         Nous
       </a>
 
@@ -138,7 +138,7 @@ Vous ne go&ucirc;terez plus jamais le poulet de la m&ecirc;me mani&egrave;re !<b
          </div>
        </div>
        <div class="buttons">
-         <button class="button is-info" id="b_con">Continuer</button>
+         <button class="button is-info" id="b_cont">Continuer</button>
        </div>
        <div>
          <p class="has-text-success">Vous ne possedez pas une compte? alors: </p>
@@ -148,7 +148,7 @@ Vous ne go&ucirc;terez plus jamais le poulet de la m&ecirc;me mani&egrave;re !<b
        </div>
      </div>     
     </div>
-    <button class="modal-close is-large" aria-label="close" id="modal_close_button"></button>
+    <button class="modal-close is-large" aria-label="close" id="modal_close_button1"></button>
   </div>
   <footer class="has-background-grey-darker hero" style="margin-top: 2rem; border-top: 2px solid">
     <p style="padding:3rem"> Une filiale de Madrigal Electromotive</p>
