--- a/enregistrement.html
+++ b/enregistrement.html
@@ -37,48 +37,47 @@
         <form>
         <h1 class="title is-size-3 has-text-link has-text-centered">Enregistrement</h1>
         <div class="field">
-         <label class="label has-text-info">Nom</label>
+         <label class="label has-text-link">Prenom</label>
          <div class="control">
-           <input class="input" type="text" placeholder="Votre nom famille" name="acc_l_name" style="border: 1px solid #43ebff;">
+           <input class="input register_input" type="text" placeholder="Votre nom famille" name="acc_l_name" style="border: 1px solid #ffc832;">
          </div>
        </div>
        <div class="field">
-         <label class="label has-text-info">Prenom</label>
+         <label class="label has-text-link">Nom</label>
          <div class="control">
-           <input class="input" type="text" placeholder="Votre prenom" name="acc_name" style="border: 1px solid #43ebff;">
+           <input class="input register_input" type="text" placeholder="Votre prenom" name="acc_name" style="border: 1px solid #ffc832;">
          </div>
          <div class="field">
-         <label class="label has-text-info">Email</label>
+         <label class="label has-text-link">Email</label>
          <div class="control">
-           <input class="input" type="email" placeholder="Votre mail" name="acc_username" style="border: 1px solid #43ebff;">
+           <input class="input register_input" type="email" placeholder="Votre mail" name="acc_username" style="border: 1px solid #ffc832;">
          </div>
          </div>
          <div class="field">
-         <label class="label has-text-info">Nom d'utilisateur</label>
+         <label class="label has-text-link">Nom d'utilisateur</label>
          <div class="control">
-           <input class="input" type="text" placeholder="Cel que vous desirez" name="acc_username" style="border: 1px solid #43ebff;">
+           <input class="input register_input" type="text" placeholder="Cel que vous desirez" name="acc_username" style="border: 1px solid #ffc832;">
          </div>
            <div class="field">
-         <label class="label has-text-info">Mot de passe</label>
+         <label class="label has-text-link">Mot de passe</label>
          <div class="control">
-           <input class="input" type="text" placeholder="Revelez-la a personne!" name="acc_passw" style="border: 1px solid #43ebff;">
+           <input class="input register_input" type="text" placeholder="Revelez-la a personne!" name="acc_passw" style="border: 1px solid #ffc832;">
          </div>
        </div>
            <div class="field">
-             <label class="label has-text-info">Pays de residence</label>
+             <label class="label has-text-link">Pays de residence</label>
              <div class="control is-expanded">
               <div class="select is-fullwidth">
                 <select> 
                   <option>États-unis</option>
                   <option>Mexique</option>
                   <option>France</option>
-                  <option>Russie</option>
                 </select>
               </div>
              </div>
            </div>
            <div class="field">
-            <label class="label has-text-info">Type de compte</label>
+            <label class="label has-text-link">Type de compte</label>
             <div class="control">
               <div class="select">
                 <select>
@@ -90,10 +89,10 @@
            </div>
            <div class="field is-grouped is-grouped-centered">
             <div class="control">
-              <input class="button is-info" type="submit" name="subm_b" id="subm_b"> 
+              <input class="button is-link" type="submit" name="subm_b" id="subm_b"> 
             </div>
             <div class="control">
-              <a class="button is-info" href="enregistrement_final.html">Continuer</a>
+              <a class="button is-link" href="enregistrement_final.html">Continuer</a>
             </div>
            </div>
       </div>
