--- a/commande_payement.html
+++ b/commande_payement.html
@@ -8,8 +8,9 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"
 >
-  <link rel="stylesheet" href="styles/style_PP.css">
-  
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/style_PP.css">
+
   <title>Los Pollos Hermanos</title>
   <style>
     :root {
@@ -27,17 +28,17 @@
 }
   </style>
 </head>
-<body class="has-background-dark" id="ppbody">
+<body class="has-background-dark">
   <h1 id="title_pp" class="has-text-primary is-size-2 has-background-white"> Los Pollos Hermanos</h1>
   <nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
   
   <div id="navbar" class="navbar-menu box pt-3 pb-3 is-active m-1">
     <div class="navbar-start">
-      <a class="navbar-item is-selected pr-4 pl-4" href="Page_Principale.html">
+      <a class="navbar-item pr-4 pl-4" href="Page_Principale.html">
         Nous
       </a>
 
-      <a class="navbar-item pr-4 pl-4 has-text-" href="menu.html">
+      <a class="navbar-item pr-4 pl-4 " href="menu.html">
         Menu
       </a>
       
@@ -96,30 +97,89 @@
     </div>
   </div>
 </nav>
-<div class="container mt-5">
-  <div class="columns">
-    <div class="column is-two-thirds">
-      <h1 class="is-size-2">Qui sommes nous?</h1>
-      <p class="has-text-white">Bienvenue chez <em>Los Pollos Hermanos</em>, le restaurant o&ugrave; la qualit&eacute; rencontre la tradition.<br>
-Fond&eacute; par le charismatique Gustavo Fring, <em>Los Pollos Hermanos</em> vous offre une exp&eacute;rience<br> culinaire in&eacute;gal&eacute;e,
-mettant en avant des poulets r&ocirc;tis &agrave; la perfection,<br>
-accompagn&eacute;s de recettes uniques qui raviront les papilles de tous les gourmets.<br>
-Avec une ambiance chaleureuse et un service irr&eacute;prochable,<br>
-chaque visite promet une escapade savoureuse au c&oelig;ur de notre passion pour la cuisine.<br>
-Que ce soit pour un d&eacute;jeuner rapide ou un d&icirc;ner entre amis,<br>
-<em>Los Pollos Hermanos</em> est l'endroit id&eacute;al pour savourer des plats d&eacute;licieux tout en profitant d’un cadre accueillant.<br>
-Vous ne go&ucirc;terez plus jamais le poulet de la m&ecirc;me mani&egrave;re !<br/></p>
-      <p class="has-text-white has-text-weight-bold"><em>Los Pollos Hermanos</em>, where something delicious is always cooking...</p>
-    </div>
-    <div class="column">
-      <div class="box has-background-white">
-      <h3 class="is-size-4 title has-text-link">Gustavo Fring, n&ocirc;tre fondateur.</h3>
-      <img src="images/Owner.PNG" class="mt-5" style="border: 2px solid black; border-radius: 5px;">
+<h1 class="title has-text-link has-text-centered is-size-4 mt-4">Payement</h1>
+<div class="columns">
+  <div class="column is-one-quarter"></div>
+  <div class="column">
+    <div class="box has-background-white p-3 mb-6">
+      <button class="button pay_acc" style="width: 100%;">
+        <span class="icon-text">
+          <span>Payer avec Carte</span>
+          <span class="icon has-text-link">
+            <i class="fas fa-arrow-down"></i>
+          </span>
+        </span>
+      </button> 
+      <div class="box has-background-dark" id="panel">
+        <div class="field ">
+          <div class="control">
+            <label class="label has-text-link">Nom sur la carte bleue</label>
+            <input class="input" type="text" placeholder="Nacho Vargas">
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="control">
+            <label class="label has-text-link">Addresse de facturation</label>
+            <input class="input" type="text" placeholder="Albuquerque, Nuevo México 87102, EE. UU.">
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="control">
+            <label class="label has-text-link">Numero de la carte</label>
+            <input class="input" type="number" placeholder="1324-5678-9101-1121">
+          </div>
+        </div>
+
+        <div class="field is-grouped is-grouped-centered">
+          <div class="control">
+            <label class="label has-text-link">Date d'expiration</label>
+            <input class="input" type="date" placeholder="20/01/2008">
+          </div>
+          <div class="control">
+            <label class="label has-text-link">Numero de securité</label>
+            <input class="input" type="number" maxlength="3" placeholder="123">
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="control">
+            <label class="label has-text-link">Numero de Telephone</label>
+            <input class="input" type="tel" placeholder="01 23 45 67 89">
+          </div>
+        </div>
+        <div class="field is-grouped is-grouped-centered">
+          <div class="control">
+            <a href="commande_remerciement.html" class="button is-link">
+              Payer
+            </a>
+          </div>
+        </div>
+      </div>
+      <button class="button pay_acc" style="width: 100%;">
+        <span class="icon-text">
+          <span>Payer avec Chickenpoints</span>
+          <span class="icon has-text-link">
+            <i class="fas fa-arrow-down"></i>
+          </span>
+        </span>
+      </button>
+      <div class="box has-background-dark" id="panel">
+        <div class="field is-grouped is-grouped-centered">
+          <div class="control">
+            <button class="button is-link">Utiliser mes Chickenpoints!!!</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+  <div class="column is-one-quarter"></div>
 </div>
-  <div class="modal" id="connection_modal">
+<p class="has-text-white is-size-5 mt-6 mb-6 has-text-centered">En utilisant cette page pour proceder au payement de votre commande vous acceptez notres
+  <a href="termes_et_conditions.html">termes et conditions</a>
+</p>
+<div class="modal" id="connection_modal">
     <div class="modal-background"></div>
     <div class="modal-content">
      <div class="box has-background-white" id="connection_form">
@@ -150,8 +210,9 @@ Vous ne go&ucirc;terez plus jamais le poulet de la m&ecirc;me mani&egrave;re !<b
     <button class="modal-close is-large" aria-label="close" id="modal_close_button1"></button>
   </div>
   <footer class="has-background-grey-darker hero" style="margin-top: 2rem; border-top: 2px solid">
-    <p style="padding:3rem"> Une filiale de Madrigal Electromotive</p>
-  </footer>
-  <script src="scripts/PP.js"></script>
-</body>
-</html>
+      <p style="padding:3rem"> Une filiale de Madrigal Electromotive</p>
+    </footer>
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <script src="scripts/commande_payment.js"></script>
+  </body>
+  </html>
