--- a/commande_pickup_local_ch.html
+++ b/commande_pickup_local_ch.html
@@ -24,7 +24,7 @@
   --bulma-scheme-h: 59;
   --bulma-scheme-s: 100%;
   --bulma-success-l: 0%;
-  --bulma-border: #ff4343;
+  --bulma-border: #ffc31c;
 }
   </style>
 </head>
@@ -34,7 +34,7 @@
   
   <div id="navbar" class="navbar-menu box pt-3 pb-3 is-active m-1">
     <div class="navbar-start">
-      <a class="navbar-item is-selected pr-4 pl-4" href="Page_Principale">
+      <a class="navbar-item pr-4 pl-4" href="Page_Principale.html">
         Nous
       </a>
 
@@ -92,7 +92,7 @@
           <a class="button is-primary" href="contratacion.html">
             <strong>Rejoins l'&Eacute;quipe!</strong>
           </a>
-          <a class="button is-light has-text-info" id="account_button">
+          <a class="button is-light has-text-link" id="account_button">
             <span class="icon-text">
                 <span class="icon">
                     <i class="fas fa-home"></i>
@@ -105,10 +105,234 @@
     </div>
   </div>
 </nav>
-<h1 class=""></h1>
+<br/>
+<h1 class="title is-size-3 has-text-centered has-text-link">Choissir un Restaurant</h1>
+<button class="button has-background-white has-text-success mb-0 ml-0" id="accordion"><strong class="has-text-link">États-Unis</strong></button>
+<div class="box has-background-white" id="panel">
+  <table class="table is-fullwidth is-hoverable has-background-dark">
+    <thead>
+      <tr>
+        <th>Ville</th>
+        <th>État</th>
+        <th>Adresse (dans la ville) </th>
+        <th>Payement avec carte</th>
+        <th>Horaire</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr id="tr1">
+        <td>Albuquerque</td>
+        <td>New Mexico</td>
+        <td>22128 Central Ave SE</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-ban"></i>
+          </span>
+        </td>
+        <td>8:00-18:00</td>
+      </tr>
+      <tr id="tr2">
+        <td>Albuquerque</td>
+        <td>New Mexico</td>
+        <td>2500 Central Ave SW #3</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-check"></i>
+          </span>
+        </td>
+        <td>8:00-18:00</td>
+      </tr>
+      <tr id="tr3">
+        <td>San Antonio</td>
+        <td>Texas</td>
+        <td>San Antonio, TX 78205</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-ban"></i>
+          </span>
+        </td>
+        <td>14:00-20:00</td>
+      </tr>
+      <tr id="tr4">
+        <td>Washington D.C</td>
+        <td>Washington D.C</td>
+        <td>1785 Florida Ave NW</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-check"></i>
+          </span>
+        </td>
+        <td>8:00-14:00</td>
+      </tr>
+      <tr id="tr5">
+        <td>L.A</td>
+        <td>California</td>
+        <td>15503 Paramount Blvd</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-check"></i>
+          </span>
+        </td>
+        <td>14:00-20:00</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<button class="button has-background-white has-text-success mb-0 ml-0" id="accordion"><strong class="has-text-link">Mexique</strong></button>
+<div class="box has-background-white" id="panel">
+  <table class="table is-fullwidth is-hoverable has-background-dark">
+    <thead>
+      <tr>
+        <th>Ville</th>
+        <th>État</th>
+        <th>Adresse (dans la ville) </th>
+        <th>Payement avec carte</th>
+        <th>Horaire</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr id="tr6">
+        <td>Juarez</td>
+        <td>Chihuahua</td>
+        <td>Nevado de Toluca 8112, Eréndira</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-ban"></i>
+          </span>
+        </td>
+        <td>8:00-18:00</td>
+      </tr>
+      <tr id="tr7">
+        <td>Chihuahua</td>
+        <td>Chihuahua</td>
+        <td>Avenida Universidad s/n, Santo Niño</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-ban"></i>
+          </span>
+        </td>
+        <td>8:00-18:00</td>
+      </tr>
+      <tr id="tr8">
+        <td>Monterrey</td>
+        <td>Nuevo Leon</td>
+        <td>José Martí Esquina, Madero</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-check"></i>
+          </span>
+        </td>
+        <td>14:00-20:00</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<button class="button has-background-white has-text-success mb-0 ml-0" id="accordion"><strong class="has-text-link">France</strong></button>
+<div class="box has-background-white" id="panel">
+  <table class="table is-fullwidth is-hoverable has-background-dark">
+    <thead>
+      <tr>
+        <th>Ville</th>
+        <th>Adresse (dans la ville) </th>
+        <th>Payement avec carte</th>
+        <th>Horaire</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr id="tr9">
+        <td>Paris</td>
+        <td>214 Rue de Grenelle</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-check"></i>
+          </span>
+        </td>
+        <td>8:00-14:00</td>
+      </tr>
+      <tr id="tr10">
+        <td>Paris</td>
+        <td>13 Rue du Faubourg du Temple</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-check"></i>
+          </span>
+        </td>
+        <td>14:00-23:00</td>
+      </tr>
+      <tr id="tr11">
+        <td>Paris</td>
+        <td>171 Bd du Montparnasse</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-check"></i>
+          </span>
+        </td>
+        <td>14:00-20:00</td>
+      </tr>
+      <tr id="tr12">
+        <td>Bordeaux</td>
+        <td>4 Cr Pasteur</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-check"></i>
+          </span>
+        </td>
+        <td>8:00-14:00</td>
+      </tr>
+      <tr id="tr13">
+        <td>Lyon</td>
+        <td>45 Rue Franklin</td>
+        <td>
+          <span class="icon has-text-link">
+            <i class="fas fa-check"></i>
+          </span>
+        </td>
+        <td>14:00-20:00</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+<div class="field is-grouped is-grouped-centered">
+  <div class="control">
+    <a href="commande.html" class="button is-link mt-4" id="continue_b">Continuer</a>
+  </div>
+</div>
+<div class="modal" id="connection_modal">
+  <div class="modal-background"></div>
+  <div class="modal-content">
+   <div class="box has-background-white" id="connection_form">
+     <h1 class="title is-size-3 has-text-link has-text-centered">Connection</h1>
+     <div class="field">
+       <label class="label has-text-info">Nom d'utilisateur</label>
+       <div class="control">
+         <input class="input" type="text" placeholder="Votre nom d'utilisateur" style="border: 1px solid #43ebff;">
+       </div>
+     </div>
+     <div class="field">
+       <label class="label has-text-info">Mot de passe </label>
+       <div class="control">
+         <input class="input" type="text" placeholder="Votre mot hyper-secrete" style="border: 1px solid #43ebff;">
+       </div>
+     </div>
+     <div class="buttons">
+       <button class="button is-info" id="b_cont">Continuer</button>
+     </div>
+     <div>
+       <p class="has-text-success">Vous ne possedez pas une compte? alors: </p>
+       <div class="buttons">
+       <a href="enregistrement_type_account.html"><button class="button is-info">Créez une compte</button></a>
+     </div>
+     </div>
+   </div>     
+  </div>
+  <button class="modal-close is-large" aria-label="close" id="modal_close_button1"></button>
+</div>
 <footer class="has-background-grey-darker hero" style="margin-top: 2rem; border-top: 2px solid">
     <p style="padding:3rem"> Une filiale de Madrigal Electromotive</p>
 </footer>
 <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+<script src="scripts/menu.js"></script>
 </body>
 </html>
